--- a/malediktator.eng.html
+++ b/malediktator.eng.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAUQFsfVW" id="custom-html-3r" data-rv-view="168">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAUQFsfVW" id="custom-html-3r" data-rv-view="168">
   <h1><br><br><br><br>Malediktator</h1>
    <hr>
   <p>Season 2 Episode 22</p>
