--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
   gtag('config', 'UA-165017722-1');
 </script>
 <!-- /Analytics -->
-
+<center>
+  <script type='text/javascript' src='//wgat5ln2wly8.com/2a/27/ee/2a27ee8c71578837f494b6715c659a2f.js'></script>
+  </center>
 
   <section class="menu cid-rXvYVhruL2" once="menu" id="menu1-0">
 
