--- a/page80.html
+++ b/page80.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  <script type='text/javascript' src='//wgat5ln2wly8.com/83/dc/7c/83dc7c2fcd4e471c83dbaaa8746523f9.js'></script>
+  <script type='text/javascript' src='//wgat5ln2wly8.com/2a/27/ee/2a27ee8c71578837f494b6715c659a2f.js'></script>
   
 </head>
 <body>
@@ -118,7 +118,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <a href="stormyweather.eng.html"><img src="assets/images/s1e01-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="miraclequeen.fr.html"><img src="assets/images/s1e01-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
               <p class="card-text"><a href="stormyweather.eng.html">Stormy Weather</a></p>               
               <div class="d-flex justify-content-between align-items-center">                 
