--- a/page80.html
+++ b/page80.html
@@ -118,7 +118,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <a href="miraclequeen.fr.html"><img src="assets/images/s1e01-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="stormyweather.eng.html"><img src="assets/images/s1e01-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
               <p class="card-text"><a href="stormyweather.eng.html">Stormy Weather</a></p>               
               <div class="d-flex justify-content-between align-items-center">                 
