--- a/miraclequeen.fr.html
+++ b/miraclequeen.fr.html
@@ -111,14 +111,14 @@ window.player = player;
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc432326012_550203744">Download</a></div>
 </div></div></div></section>
  <div class="more_options" style="margin-bottom:23px;margin-left:10px;margin-right:10px;">
-         <p style="margin-top: 10px;margin-bottom: 0px;">LANGUE: <br>
+         <p style="margin-top: 10px;margin-bottom: 0px;">LANGUAGE: <br>
 
 
-         <a title='ANGLAIS' href='?i=1562457908&s=003&e=026&sl=en' style='color:#ffffff61;'>
+         <a title='ANGLAIS' href='miraclequeen.eng.html' style='color:#ffffff61;'>
             <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
          </a>
-         <a title='FRANÇAIS' href='?i=1562457908&s=003&e=026&sl=fr' style='color:#ffffff61;'>
-            <img style='margin-top: -3px;'width='23px' src='assets/img/flags/flag-fr.jpg'/> FRANÇAIS
+         <a title='FRANÇAIS' href='miraclequeen.eng.html' style='color:#ffffff61;'>
+            <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-fr.jpg'/> FRANÇAIS
            </a>     </p>
   </div>
 
