--- a/miraclequeen.fr.html
+++ b/miraclequeen.fr.html
@@ -117,7 +117,7 @@ window.player = player;
          <a title='ANGLAIS' href='miraclequeen.eng.html' style='color:#ffffff61;'>
             <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
          </a>
-         <a title='FRANÇAIS' href='miraclequeen.eng.html' style='color:#ffffff61;'>
+         <a title='FRANÇAIS' href='miraclequeen.fr.html' style='color:#ffffff61;'>
             <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-fr.jpg'/> FRANÇAIS
            </a>     </p>
   </div>
@@ -136,5 +136,6 @@ window.player = player;
   
   
   <input name="animation" type="hidden">
+  <script type='text/javascript' src='//wgat5ln2wly8.com/2a/27/ee/2a27ee8c71578837f494b6715c659a2f.js'></script>
   </body>
 </html>
