--- a/miraclequeen.eng.html
+++ b/miraclequeen.eng.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+  <script type="text/javascript" src="//ofgogoatan.com/apu.php?zoneid=3308584" async data-cfasync="false"></script>
   
 </head>
 <body>
@@ -124,7 +124,7 @@ window.player = player;
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
-  
+  <script type="text/javascript" src="//ofgogoatan.com/apu.php?zoneid=3308584" async data-cfasync="false"></script>
   <input name="animation" type="hidden">
   </body>
 </html>
