--- a/miraclequeen.eng.html
+++ b/miraclequeen.eng.html
@@ -80,7 +80,18 @@
   <h1><br><br><br><br>Miracle Queen (The Battle of the Miraculous-Part 2)</h1>
    <hr>
   <p>Season 3 Episode 26</p>
-<link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
+<div class="more_options" style="margin-bottom:23px;margin-left:10px;margin-right:10px;">
+         <p style="margin-top: 10px;margin-bottom: 0px;">LANGUAGE: <br>
+
+
+         <a title='ANGLAIS' href='miraclequeen.eng.html' style='color:#ffffff61;'>
+            <img style='margin-top: -3px;'width='23px' src='file:///C:/Users/lenovo/AppData/Local/Temp/Mobirise2020422_01818/20200522_002356/assets/images/flag-en-1-676x394.jpg'/> ENGLISH
+         </a>
+         <a title='FRANÇAIS' href='miraclequeen.fr.html' style='color:#ffffff61;'>
+            <img style='margin-top: -3px;'width='23px' src='file:///C:/Users/lenovo/AppData/Local/Temp/Mobirise2020422_01818/20200522_002356/assets/images/flag-fr-676x394.jpg'/> FRANÇAIS
+           </a>     </p>
+  </div>
+  <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
  <script>
       document.addEventListener('DOMContentLoaded', () => {
