--- a/stormyweather.ar.html
+++ b/stormyweather.ar.html
@@ -76,10 +76,10 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rZLzz2cgM2" id="custom-html-6e" data-rv-view="1228">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rZLzz2cgM2" id="custom-html-6e" data-rv-view="1491">
   <h1><br><br><br><br><br>Stormy Weather</h1>
    <hr>
-  <p>Season 1 episode 1<br><br>Disclaimer: This video belongs to nightosphere.net</p>
+  <p>Season 1 episode 1<br><br></p>
 <div style="width:660px; height:371px" class="open-stream-player" id="open-stream-player-8767893"></div>
 <script src="https://tune.pk/js/open/embed.js?vid=8767893&amp;userid=610501"></script>
 <section class="mbr-section content8">
