--- a/stormyweather.ar.html
+++ b/stormyweather.ar.html
@@ -76,16 +76,13 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rZLzz2cgM2" id="custom-html-6e" data-rv-view="1491">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rZLzz2cgM2" id="custom-html-6e" data-rv-view="1760">
   <h1><br><br><br><br><br>Stormy Weather</h1>
    <hr>
   <p>Season 1 episode 1<br><br></p>
 <div style="width:660px; height:371px" class="open-stream-player" id="open-stream-player-8767893"></div>
-<script src="https://tune.pk/js/open/embed.js?vid=8767893&amp;userid=610501"></script>
-<section class="mbr-section content8">
-
-    
-</section>
+<script src="https://tune.pk/js/open/embed.js?vid=8767893&userid=610501"></script>
+ 
 </div>
 
 
