create github pages

--- a/thepuppeteer.eng.html
+++ b/thepuppeteer.eng.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <script type='text/javascript' src='//wgat5ln2wly8.com/83/dc/7c/83dc7c2fcd4e471c83dbaaa8746523f9.js'></script>
+  
   
   
 </head>
@@ -67,16 +67,16 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">Full episodes
+                    </a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXABxvuVwF" id="custom-html-2s" data-rv-view="75">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXABxvuVwF" id="custom-html-2s" data-rv-view="601">
   <h1><br><br><br><br>The Puppeteer</h1>
    <hr>
   <p>Season 1 Episode 18</p>
@@ -110,13 +110,7 @@ window.player = player;
             <div class="p-3 my-3 bg-dark text-white">
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc-192909419_543334265">Download</a></div>
 </div></div></div></section>
-<script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
-<div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
-  <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
-<div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
-  <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
-<div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
-  </div>
+</div>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
