--- a/chrismaster.eng.html
+++ b/chrismaster.eng.html
@@ -67,16 +67,16 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">Full episodes
+                    </a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBy8iuLag" id="custom-html-3g" data-rv-view="216">
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBy8iuLag" id="custom-html-3g" data-rv-view="742">
   <h1><br><br><br><br>Chris Master</h1>
    <hr>
   <p>Season 3 Episode 12</p>
