--- a/felix.eng.html
+++ b/felix.eng.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  <script type='text/javascript' src='//wgat5ln2wly8.com/83/dc/7c/83dc7c2fcd4e471c83dbaaa8746523f9.js'></script>
+  
   
 </head>
 <body>
@@ -67,16 +67,16 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">Full episodes
+                    </a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBBIXvUnT" id="custom-html-3s" data-rv-view="249">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBBIXvUnT" id="custom-html-3s" data-rv-view="775">
   <h1><br><br><br><br>Felix</h1>
    <hr>
   <p>Season 3 Episode 23</p>
