--- a/miraclequeen.eng.html
+++ b/miraclequeen.eng.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  <script type="text/javascript" src="//ofgogoatan.com/apu.php?zoneid=3308584" async data-cfasync="false"></script>
+  
   
 </head>
 <body>
@@ -67,20 +67,20 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">Full episodes
+                    </a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBC9WGtCu" id="custom-html-3w" data-rv-view="258">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBC9WGtCu" id="custom-html-3w" data-rv-view="784">
   <h1><br><br><br><br>Miracle Queen (The Battle of the Miraculous-Part 2)</h1>
    <hr>
   <p>Season 3 Episode 26</p>
-  <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
+<link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
  <script>
       document.addEventListener('DOMContentLoaded', () => {
@@ -110,13 +110,7 @@ window.player = player;
             <div class="p-3 my-3 bg-dark text-white">
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc-192909419_543333785">Download</a></div>
 </div></div></div></section>
-<script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
-<div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
-  <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
-<div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
-  <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
-<div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
-  </div>
+</div>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
@@ -130,7 +124,7 @@ window.player = player;
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
-  <script type="text/javascript" src="//ofgogoatan.com/apu.php?zoneid=3308584" async data-cfasync="false"></script>
+  
   <input name="animation" type="hidden">
   </body>
 </html>
