--- a/page80.html
+++ b/page80.html
@@ -21,8 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  <script type='text/javascript' src='//wgat5ln2wly8.com/2a/27/ee/2a27ee8c71578837f494b6715c659a2f.js'></script>
-  <script type='text/javascript' src='//wgat5ln2wly8.com/83/dc/7c/83dc7c2fcd4e471c83dbaaa8746523f9.js'></script>
+  
   
 </head>
 <body>
@@ -68,20 +67,20 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">Full episodes
+                    </a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><div class="container cid-rXAJ5IF6V2" id="custom-html-3h" data-rv-view="102">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><div class="container cid-rXAJ5IF6V2" id="custom-html-3h" data-rv-view="628">
     <div class="row">
         <h1><br><br><br><br><br>Full episodes<br><br></h1>
       </div>
-    </div><ul class="nav nav-tabs cid-rXAJ5IF6V2" id="custom-html-3h" role="tablist" data-rv-view="102">
+    </div><ul class="nav nav-tabs cid-rXAJ5IF6V2" id="custom-html-3h" role="tablist" data-rv-view="628">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Season 1</a>
   </li>
@@ -91,7 +90,7 @@
   <li class="nav-item">
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Season 3</a>
   </li>
-</ul><div class="tab-content cid-rXAJ5IF6V2" id="custom-html-3h" data-rv-view="102">
+</ul><div class="tab-content cid-rXAJ5IF6V2" id="custom-html-3h" data-rv-view="628">
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
   <style>
       .bd-placeholder-img {
