--- a/startrain.eng.html
+++ b/startrain.eng.html
@@ -67,16 +67,16 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">Full episodes
+                    </a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXByubKUti" id="custom-html-3h" data-rv-view="219">
+<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXByubKUti" id="custom-html-3h" data-rv-view="745">
   <h1><br><br><br><br>Startrain</h1>
    <hr>
   <p>Season 3 Episode 13</p>
