--- a/page80.html
+++ b/page80.html
@@ -11,6 +11,16 @@
   
   
   <title>Full episodes/eng</title>
+  <div class="more_options" style="margin-bottom:23px;margin-left:10px;margin-right:10px;">
+         <p style="margin-top: 10px;margin-bottom: 0px;">SELECT LANGUAGE: <br>
+
+
+         <a title='ANGLAIS' href='page80.html' style='color:#ffffff61;'>
+            <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
+         </a>
+         <a title='FRANÇAIS' href='miraclequeen.fr.html' style='color:#ffffff61;'>
+            <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-fr.jpg'/> FRANÇAIS
+           </a>     </p>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
