--- a/page80.html
+++ b/page80.html
@@ -81,8 +81,7 @@
   <div class="more_options" style="margin-bottom:23px;margin-left:10px;margin-right:10px;">
          <p style="margin-top: 10px;margin-bottom: 0px;">SELECT LANGUAGE: <br>
 
-
-         <a title='ANGLAIS' href='page80.html' style='color:#ffffff61;'>
+<a title='ANGLAIS' href='page80.html' style='color:#000000;'>
             <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
          </a>
          <a title='FRANÇAIS' href='miraclequeen.fr.html' style='color:#ffffff61;'>
