--- a/page80.html
+++ b/page80.html
@@ -337,7 +337,7 @@
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
             <a href="pixelator.eng.html"><img src="assets/images/s1e20-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"></p><p><a href="pixelator.eng.html">Pixelator</a></p><p></p>
+              <p class="card-text"><a href="pixelator.eng.html">Pixelator</a></p><p></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">22 mins</small>
               </div>
@@ -638,7 +638,7 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm bg-white rounded">
-            <a href="sandboy.eng.html"><img src="assets/images/s2e18-700x394.png" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="sandboy.eng.html"><img src="https://seriex.to/assets/img/thumbnails/ep/1562457908-002-019.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
               <p class="card-text"><a href="sandboy.eng.html">Sandboy</a></p>
               <div class="d-flex justify-content-between align-items-center">
