--- a/page80.html
+++ b/page80.html
@@ -84,7 +84,7 @@
 <a title='ANGLAIS' href='page80.html' style='color:#000000;'>
             <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
          </a>
-         <a title='FRANÇAIS' href='miraclequeen.fr.html' style='color:#000000;'>
+         <a title='FRANÇAIS' href='' style='color:#000000;'>
             <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-fr.jpg'/> FRANÇAIS
            </a>     </p>
     </div><ul class="nav nav-tabs cid-rXAJ5IF6V2" id="custom-html-3h" role="tablist" data-rv-view="359">
