--- a/page80.html
+++ b/page80.html
@@ -974,9 +974,9 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm bg-white rounded">
-            <a href="hepuppeteer2.eng.html"><img src="assets/images/s3e21-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="thepuppeteer2.eng.html"><img src="assets/images/s3e21-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="hepuppeteer2.eng.html">The Puppeteer 2</a></p>
+              <p class="card-text"><a href="thepuppeteer2.eng.html">The Puppeteer 2</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">22 mins</small>
               </div>
