--- a/test.html
+++ b/test.html
@@ -87,15 +87,13 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://vignette.wikia.nocookie.net/lady-bug/images/e/e7/SW_%28331%29.png/revision/latest?cb=20181027232243" id="player" playsinline="" controls=""> <source src="https://vk.com/doc432326012_548837472" type="video/mp4"> </video>
+  <video poster="https://vignette.wikia.nocookie.net/lady-bug/images/e/e7/SW_%28331%29.png/revision/latest?cb=20181027232243" id="player" playsinline="" controls=""> <source src="https://vk.com/doc432326012_548837472" type="video/mp4"> style="--plyr-color-main: #FF0000;" </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
 <script src="player_data/plyr.min.js"></script>
 <script id="rendered-js">
-<video class="player" style="--plyr-color-main: ##4a5464;">
-    ...
-</video>
+
           // Change the second argument to your options:
 // https://github.com/sampotts/plyr/#options
 const player = new Plyr('video', { captions: { active: true } });
