--- a/test22.html
+++ b/test22.html
@@ -197,6 +197,12 @@
               </div>
             </div>
           </div>
+            <div class="card  mb-4 shadow-sm mb-4 bg-white rounded-0" style="width: 18rem;">
+  <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
         </div></div></div></div></main></div>
     <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
