--- a/test22.html
+++ b/test22.html
@@ -172,22 +172,19 @@
   <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
     <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Miracle Queen</p>
+      <h5 class="card-title">Miracle Queen</h5>
     </div>
   </div>
   <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
     <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Miracle Queen</p>
+      <h5 class="card-title">Miracle Queen</h5>
     </div>
   </div>
   <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
     <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Miracle Queen</p>
+      <h5 class="card-title">Miracle Queen</h5>
     </div>
   </div>
 </div>
